--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "psr-0": { "": "src/" }
     },
     "require": {
-        "php": ">=5.3.3"
+        "php": ">=5.3.3",
+        "friendsofsymfony/user-bundle": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
